2004-02-16  Daniel Macks  <dmacks@netspace.org>

	* Services.pm: *Script parsing improvements for non-#!-specified
	scripts: fix removal of leading whitespace, implement use of \ at
	end of line to allow wrapping of long lines. (by Rohan Lloyd; see
	"Folding long lines in scripts" on fink-devel)

2004-02-14  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* VirtPackage.pm: Added "debug" mode to show what's going on while
	searching for various virtual bits.  (Good idea, Martin!)

2004-02-12  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: conditional_pkg_list: optimized initial field
	parsing and fixed consecutive puctuation replacement. Remembered
	to save value back to hash. Changed syntax to:
	  Depends: (string1 op string2) foo
	where op is one of (<< >> <= >= == !=) for string comparison or:
	  Depends: (string) foo
	where string must be non-null.
	
2004-02-11  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Wrote conditional_pkg_list which processes
	conditionals in Depends (and similarly formatted fields) according
	to 'Depends: (a b) foo', where foo is only a dependency if a and b
	are stringwise equal. Will probably need to bump max_info_level.
	Tested and seems to work, but not actually calling it from main
	code yet.

2004-02-11  Daniel Macks  <dmacks@netspace.org>

	* Services.pm, Packages.pm, Validation.pm: Changed handle_infon_block
	from being a function in Services to being a class method in Packages.

2004-02-10  Daniel Macks  <dmacks@netspace.org>

	* FinkVersion.pm.in: Implemented max_info_level(): returns largest
	.info version this fink can handle. Initial value is 1 (same
	format as non-InfoN file).
	* Services.pm: Implemented handle_infon_block: Reprocess .info to
	account for it consisting entirely of a InfoN: multiline field. If
	N larger than max_info_level, warn and scrap the file.
	* Package.pm, Validation.pm: Call handle_infon_block after reading
	.info.
	
2004-02-04  Dave Morrison  <dmrrsn@users.sourceforge.net>
